dpkg (1.17.6) UNRELEASED; urgency=low

  [ Guillem Jover ]
  * Move signing in dpkg-buildpackage to the end of the build.

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Thu, 12 Dec 2013 08:59:54 +0100

dpkg (1.17.5) unstable; urgency=low

  [ Guillem Jover ]
  * Switch non-tty output to be line buffered by default, and set it to fully
    buffered only for programs with precious and abundant output, not just
    progress reporting output (i.e. dpkg-query). This was causing out-of-order
    error and debug messages in relation to normal progress reporting, which
    could be very confusing. Regression introduced in dpkg 1.17.2.
  * Fix segfault in update-alternatives when adding or renaming slaves for
    an existing alternative. Regression introduced in dpkg 1.17.2.
    Closes: #731710
  * Fix dpkg-maintscript-helper symlink_to_dir and dir_to_symlink commands:
    - Always run postinst code regardless of prior-version, as the package
      might have been never configured before.
    - Be more strict when checking the expected state of paths.
    - Rename subcommand shell code to check-files-ownership.
    - Change dir_to_symlink switch code to use a staging empty directory,
      to avoid dpkg removing files from other packages, when removing the
      package old files during upgrade.
    - Bump minimal version in man page to 1.17.5.
    Closes: #731730
  * Mention gpg2 too as one of the default sign commands in dpkg-buildpackage.

  [ Updated dpkg translations ]
  * German (Sven Joachim).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Thu, 12 Dec 2013 08:29:45 +0100

dpkg (1.17.4) unstable; urgency=low

  * Keep the diversions and statoverride database files open during dpkg