@@ -2,6 +2,9 @@ dpkg (1.17.6) UNRELEASED; urgency=low
 
   [ Guillem Jover ]
   * Move signing in dpkg-buildpackage to the end of the build.
+  * Add new --check-command and --check-option options to dpkg-buildpackage,
+    and DEB_CHECK_COMMAND environment variable as a default value, to
+    specify a package checker to use before the signing process.
 
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
